openturns/1.16/_sources/auto_functional_modeling/index.rst.txt
:orphan:



.. _sphx_glr_auto_functional_modeling:

.. _Functional modeling:

Functional modeling
===================


.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_auto_functional_modeling_vectorial_functions:

.. _Vectorial functions:

Vectorial functions
-------------------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a composed function">

.. only:: html

 .. figure:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_composed_function_thumb.png
     :alt: Create a composed function

     :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_composed_function.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/vectorial_functions/plot_composed_function

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a parametric function">

.. only:: html

 .. figure:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_parametric_function_thumb.png
     :alt: Create a parametric function

     :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_parametric_function.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/vectorial_functions/plot_parametric_function

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a symbolic function">

.. only:: html

 .. figure:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_symbolic_function_thumb.png
     :alt: Create a symbolic function

     :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_symbolic_function.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/vectorial_functions/plot_symbolic_function

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create an aggregated function">

.. only:: html

 .. figure:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_aggregated_function_thumb.png
     :alt: Create an aggregated function

     :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_aggregated_function.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/vectorial_functions/plot_aggregated_function

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a linear combination of functions">

.. only:: html

 .. figure:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_linear_combination_function_thumb.png
     :alt: Create a linear combination of functions

     :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_linear_combination_function.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/vectorial_functions/plot_linear_combination_function

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a quadratic function">

.. only:: html

 .. figure:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_quadratic_function_thumb.png
     :alt: Create a quadratic function

     :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_quadratic_function.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/vectorial_functions/plot_quadratic_function

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a Python function">

.. only:: html

 .. figure:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_python_function_thumb.png
     :alt: Create a Python function

     :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_python_function.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/vectorial_functions/plot_python_function

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Defining Python and symbolic functions: a quick start introduction to functions">

.. only:: html

 .. figure:: /auto_functional_modeling/vectorial_functions/images/thumb/sphx_glr_plot_quick_start_functions_thumb.png
     :alt: Defining Python and symbolic functions: a quick start introduction to functions

     :ref:`sphx_glr_auto_functional_modeling_vectorial_functions_plot_quick_start_functions.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/vectorial_functions/plot_quick_start_functions
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_auto_functional_modeling_field_functions:

.. _Field functions:

Field functions
---------------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Value function">

.. only:: html

 .. figure:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_value_function_thumb.png
     :alt: Value function

     :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_value_function.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/field_functions/plot_value_function

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Vertex value function">

.. only:: html

 .. figure:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_vertexvalue_function_thumb.png
     :alt: Vertex value function

     :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_vertexvalue_function.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/field_functions/plot_vertexvalue_function

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Define a function with a field output: the viscous free fall example">

.. only:: html

 .. figure:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_viscous_fall_field_function_thumb.png
     :alt: Define a function with a field output: the viscous free fall example

     :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_viscous_fall_field_function.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/field_functions/plot_viscous_fall_field_function

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Define a connection function with a field output">

.. only:: html

 .. figure:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_viscous_fall_field_function_connection_thumb.png
     :alt: Define a connection function with a field output

     :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_viscous_fall_field_function_connection.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/field_functions/plot_viscous_fall_field_function_connection

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Logistic growth model">

.. only:: html

 .. figure:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_logistic_growth_model_thumb.png
     :alt: Logistic growth model

     :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_logistic_growth_model.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/field_functions/plot_logistic_growth_model

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Function manipulation">

.. only:: html

 .. figure:: /auto_functional_modeling/field_functions/images/thumb/sphx_glr_plot_function_manipulation_thumb.png
     :alt: Function manipulation

     :ref:`sphx_glr_auto_functional_modeling_field_functions_plot_function_manipulation.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/field_functions/plot_function_manipulation
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_auto_functional_modeling_link_to_an_external_code:

.. _Link to an external code:

Link to an external code
------------------------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Link to a computer code with coupling tools">

.. only:: html

 .. figure:: /auto_functional_modeling/link_to_an_external_code/images/thumb/sphx_glr_plot_link_computer_code_coupling_tools_thumb.png
     :alt: Link to a computer code with coupling tools

     :ref:`sphx_glr_auto_functional_modeling_link_to_an_external_code_plot_link_computer_code_coupling_tools.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_functional_modeling/link_to_an_external_code/plot_link_computer_code_coupling_tools
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-gallery


  .. container:: sphx-glr-download sphx-glr-download-python

    :download:`Download all examples in Python source code: auto_functional_modeling_python.zip </auto_functional_modeling/auto_functional_modeling_python.zip>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

    :download:`Download all examples in Jupyter notebooks: auto_functional_modeling_jupyter.zip </auto_functional_modeling/auto_functional_modeling_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
